fixed horizontal scrolling on post.html

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -29,7 +29,6 @@
     grid-area: ct;
     align-items: center;
     padding: 10px;
-
 }
 
 #sidebar {
@@ -39,7 +38,6 @@
     /*border: 1px solid orange;*/
     grid-area: sb;
     padding: 10px;
-
 }
 
 #img {
@@ -68,7 +66,7 @@
     border-radius: 4px;
 }
 
-.author-info{
+.author-info {
     list-style-type: none;
     background: #dddddd;
 }
@@ -94,4 +92,17 @@
 .fa-twitter {
     background: #55ACEE;
     color: white;
+}
+
+@media (max-width: 420px) {
+    .container {
+        grid-template-rows: 100px 1fr 1fr 50px;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "top"
+            "sb"
+            "ct"
+            "ft";
+    }
+
 }
